--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ speed-measure-plugin.json
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
+.idea/
 
 # misc
 /.sass-cache
@@ -40,6 +41,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+publish.bat
 
 # System Files
 .DS_Store
