--- a/package.json
+++ b/package.json
@@ -23,31 +23,31 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "angular-cli-ghpages": "^0.6.2",
-    "core-js": "^3.6.4",
-    "rxjs": "^6.5.4",
+    "core-js": "^3.6.5",
+    "rxjs": "^6.5.5",
     "serialize-javascript": "^2.1.1",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "tslib": "^1.11.1",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular/cli": "^8.3.23",
+    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular/cli": "^8.3.26",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^12.12.24",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^12.12.36",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.1",
-    "protractor": "~5.4.2",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "protractor": "^5.4.4",
     "ts-node": "~8.5.4",
     "tslint": "~5.20.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.8.3"
   }
 }
