--- a/package.json
+++ b/package.json
@@ -12,37 +12,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.1.1",
-    "@angular/cdk": "^11.1.1",
-    "@angular/common": "^11.1.1",
-    "@angular/compiler": "^11.1.1",
-    "@angular/core": "^11.1.1",
-    "@angular/forms": "^11.1.1",
-    "@angular/platform-browser": "^11.1.1",
-    "@angular/platform-browser-dynamic": "^11.1.1",
-    "@angular/router": "^11.1.1",
+    "@angular/animations": "^11.2.8",
+    "@angular/cdk": "^11.2.7",
+    "@angular/common": "^11.2.8",
+    "@angular/compiler": "^11.2.8",
+    "@angular/core": "^11.2.8",
+    "@angular/forms": "^11.2.8",
+    "@angular/platform-browser": "^11.2.8",
+    "@angular/platform-browser-dynamic": "^11.2.8",
+    "@angular/router": "^11.2.8",
     "angular-cli-ghpages": "^1.0.0-rc.1",
     "core-js": "^3.6.5",
-    "rxjs": "^6.6.3",
+    "rxjs": "^6.6.7",
     "serialize-javascript": "^4.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.7",
-    "@angular-eslint/builder": "1.1.0",
-    "@angular-eslint/eslint-plugin": "1.1.0",
-    "@angular-eslint/eslint-plugin-template": "1.1.0",
-    "@angular-eslint/schematics": "1.1.0",
-    "@angular-eslint/template-parser": "1.1.0",
+    "@angular-eslint/builder": "^2.0.0",
+    "@angular-eslint/eslint-plugin": "^2.0.0",
+    "@angular-eslint/eslint-plugin-template": "^2.0.0",
+    "@angular-eslint/schematics": "2.0.2",
+    "@angular-eslint/template-parser": "^2.0.0",
     "@angular/cli": "^11.2.7",
-    "@angular/compiler-cli": "^11.1.1",
-    "@angular/language-service": "^11.1.1",
+    "@angular/compiler-cli": "^11.2.8",
+    "@angular/language-service": "^11.2.8",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.0.26",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "2.22.1",
