--- a/package.json
+++ b/package.json
@@ -8,21 +8,20 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "preinstall": "npx npm-force-resolutions"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.2",
-    "@angular/cdk": "^12.0.2",
-    "@angular/common": "^12.0.2",
-    "@angular/compiler": "^12.0.2",
-    "@angular/core": "^12.0.2",
-    "@angular/forms": "^12.0.2",
-    "@angular/platform-browser": "^12.0.2",
-    "@angular/platform-browser-dynamic": "^12.0.2",
-    "@angular/router": "^12.0.2",
-    "angular-cli-ghpages": "^0.5.3",
+    "@angular/animations": "^12.0.4",
+    "@angular/cdk": "^12.0.4",
+    "@angular/common": "^12.0.4",
+    "@angular/compiler": "^12.0.4",
+    "@angular/core": "^12.0.4",
+    "@angular/forms": "^12.0.4",
+    "@angular/platform-browser": "^12.0.4",
+    "@angular/platform-browser-dynamic": "^12.0.4",
+    "@angular/router": "^12.0.4",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "core-js": "^3.6.5",
     "rxjs": "^6.6.7",
     "serialize-javascript": "^4.0.0",
@@ -34,11 +33,11 @@
     "@angular-eslint/builder": "^12.0.0",
     "@angular-eslint/eslint-plugin": "^12.0.0",
     "@angular-eslint/eslint-plugin-template": "^12.0.0",
-    "@angular-eslint/schematics": "12.0.0",
+    "@angular-eslint/schematics": "12.1.0",
     "@angular-eslint/template-parser": "^12.0.0",
-    "@angular/cli": "^12.0.2",
-    "@angular/compiler-cli": "^12.0.2",
-    "@angular/language-service": "^12.0.2",
+    "@angular/cli": "^12.0.4",
+    "@angular/compiler-cli": "^12.0.4",
+    "@angular/language-service": "^12.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.0.26",
