--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rxjs": "^6.6.7",
     "serialize-javascript": "^4.0.0",
     "tslib": "^2.0.0",
+    "webpack-sources": "^3.2.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
