--- a/package.json
+++ b/package.json
@@ -1,65 +1,39 @@
 {
   "name": "pjs4",
-  "version": "2021.9.14",
-  "homepage": "https://pscottzero.github.io",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.7",
-    "@angular/cdk": "^14.2.5",
-    "@angular/common": "^14.2.7",
-    "@angular/compiler": "^14.2.7",
-    "@angular/core": "^14.2.7",
-    "@angular/forms": "^14.2.7",
-    "@angular/platform-browser": "^14.2.7",
-    "@angular/platform-browser-dynamic": "^14.2.7",
-    "@angular/router": "^14.2.7",
-    "angular-cli-ghpages": "^1.0.0-rc.1",
-    "core-js": "^3.6.5",
-    "rxjs": "^6.6.7",
-    "serialize-javascript": "^4.0.0",
-    "tslib": "^2.0.0",
-    "webpack-sources": "^3.2.1",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "^15.1.0",
+    "@angular/common": "^15.1.0",
+    "@angular/compiler": "^15.1.0",
+    "@angular/core": "^15.1.0",
+    "@angular/forms": "^15.1.0",
+    "@angular/platform-browser": "^15.1.0",
+    "@angular/platform-browser-dynamic": "^15.1.0",
+    "@angular/router": "^15.1.0",
+    "prettier": "^2.8.3",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.6",
-    "@angular-eslint/builder": "^14.1.2",
-    "@angular-eslint/eslint-plugin": "^14.1.2",
-    "@angular-eslint/eslint-plugin-template": "^14.1.2",
-    "@angular-eslint/schematics": "14.1.2",
-    "@angular-eslint/template-parser": "^14.1.2",
-    "@angular/cli": "^14.2.6",
-    "@angular/compiler-cli": "^14.2.7",
-    "@angular/language-service": "^14.2.7",
-    "@types/jasmine": "~3.7.1",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.0.26",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.3.2",
+    "@angular-devkit/build-angular": "^15.1.1",
+    "@angular/cli": "~15.1.1",
+    "@angular/compiler-cli": "^15.1.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "prettier": "^2.7.1",
-    "protractor": "~7.0.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^4.4.4"
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.9.4"
   }
 }
