--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"prettier": "^3.4.2",
@@ -25,6 +26,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"sass": "^1.89.2"
+		"sass": "^1.89.2",
+		"sv": "^0.8.10"
 	}
 }
